--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,6 @@
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 
-@import "~@angular/material/theming";
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 
@@ -18,64 +16,64 @@
 @import url("https://fonts.googleapis.com/css?family=Inter:300,400,500,600");
 
 $fontConfig: (
-  display-4: mat-typography-level(16px, 1, 400, "Inter", 0),
-  display-3: mat-typography-level(16px, 1, 400, "Inter", 0),
-  display-2: mat-typography-level(16px, 1, 400, "Inter", 0),
-  display-1: mat-typography-level(16px, 1, 400, "Inter", 0),
-  headline: mat-typography-level(16px, 1, 400, "Inter", 0),
-  title: mat-typography-level(16px, 1, 400, "Inter", 0),
-  subheading-2: mat-typography-level(16px, 1, 400, "Inter", 0),
-  subheading-1: mat-typography-level(16px, 1, 400, "Inter", 0),
-  body-2: mat-typography-level(16px, 1, 400, "Inter", 0),
-  body-1: mat-typography-level(16px, 1, 400, "Inter", 0),
-  button: mat-typography-level(16px, 1, 400, "Inter", 0),
-  caption: mat-typography-level(16px, 1, 400, "Inter", 0),
-  input: mat-typography-level(16px, 1, 400, "Inter", 0),
+  display-4: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  display-3: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  display-2: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  display-1: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  headline: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  title: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  subheading-2: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  subheading-1: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  body-2: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  body-1: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  button: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  caption: mat.define-typography-level(16px, 1, 400, "Inter", 0),
+  input: mat.define-typography-level(16px, 1, 400, "Inter", 0),
 );
 
 $dark-text: #000000;
 $dark-primary-text: rgba($dark-text, 0.87);
-$dark-accent-text: rgba($dark-primary-text, 0.54);
-$dark-disabled-text: rgba($dark-primary-text, 0.38);
-$dark-dividers: rgba($dark-primary-text, 0.12);
-$dark-focused: rgba($dark-primary-text, 0.12);
+$dark-accent-text: rgba(rgba(black, 0.87), 0.54);
+$dark-disabled-text: rgba(rgba(black, 0.87), 0.38);
+$dark-dividers: rgba(rgba(black, 0.87), 0.12);
+$dark-focused: rgba(rgba(black, 0.87), 0.12);
 
-$mat-light-theme-foreground: (
+mat.$light-theme-foreground-palette: (
   base: black,
-  divider: $dark-dividers,
-  dividers: $dark-dividers,
-  disabled: $dark-disabled-text,
+  divider: rgba(black, 0.12),
+  dividers: rgba(black, 0.12),
+  disabled: rgba(black, 0.38),
   disabled-button: rgba($dark-text, 0.26),
-  disabled-text: $dark-disabled-text,
+  disabled-text: rgba(black, 0.38),
   elevation: black,
   secondary-text: $dark-accent-text,
-  hint-text: $dark-disabled-text,
+  hint-text: rgba(black, 0.38),
   accent-text: $dark-accent-text,
   icon: $dark-accent-text,
   icons: $dark-accent-text,
-  text: $dark-primary-text,
-  slider-min: $dark-primary-text,
+  text: rgba(black, 0.87),
+  slider-min: rgba(black, 0.87),
   slider-off: rgba($dark-text, 0.26),
-  slider-off-active: $dark-disabled-text,
+  slider-off-active: rgba(black, 0.38)
 );
 
 // Dark Theme text
 $light-text: #ffffff;
 $light-primary-text: $light-text;
-$light-accent-text: rgba($light-primary-text, 0.7);
-$light-disabled-text: rgba($light-primary-text, 0.5);
-$light-dividers: rgba($light-primary-text, 0.12);
-$light-focused: rgba($light-primary-text, 0.12);
+$light-accent-text: rgba(white, 0.7);
+$light-disabled-text: rgba(white, 0.5);
+$light-dividers: rgba(white, 0.12);
+$light-focused: rgba(white, 0.12);
 
-$mat-dark-theme-foreground: (
+mat.$dark-theme-foreground-palette: (
   base: $light-text,
-  divider: $light-dividers,
-  dividers: $light-dividers,
-  disabled: $light-disabled-text,
+  divider: rgba(white, 0.12),
+  dividers: rgba(white, 0.12),
+  disabled: rgba(white, 0.5),
   disabled-button: rgba($light-text, 0.3),
-  disabled-text: $light-disabled-text,
+  disabled-text: rgba(white, 0.5),
   elevation: black,
-  hint-text: $light-disabled-text,
+  hint-text: rgba(white, 0.5),
   secondary-text: $light-accent-text,
   accent-text: $light-accent-text,
   icon: $light-text,
@@ -83,7 +81,7 @@ $mat-dark-theme-foreground: (
   text: $light-text,
   slider-min: $light-text,
   slider-off: rgba($light-text, 0.3),
-  slider-off-active: rgba($light-text, 0.3),
+  slider-off-active: rgba($light-text, 0.3)
 );
 
 // Background config
@@ -98,7 +96,7 @@ $dark-bg-tooltip: lighten(#2c2c2c, 20%);
 $dark-bg-alpha-4: rgba(#2c2c2c, 0.04);
 $dark-bg-alpha-12: rgba(#2c2c2c, 0.12);
 
-$mat-light-theme-background: (
+mat.$light-theme-background-palette: (
   background: $light-background,
   status-bar: $light-bg-darker-20,
   app-bar: $light-bg-darker-5,
@@ -108,12 +106,12 @@ $mat-light-theme-background: (
   tooltip: $dark-bg-tooltip,
   disabled-button: $dark-bg-alpha-12,
   raised-button: $light-bg-lighter-5,
-  focused-button: $dark-focused,
+  focused-button: rgba(black, 0.12),
   selected-button: $light-bg-darker-20,
   selected-disabled-button: $light-bg-darker-30,
   disabled-button-toggle: $light-bg-darker-10,
   unselected-chip: $light-bg-darker-10,
-  disabled-list-option: $light-bg-darker-10,
+  disabled-list-option: $light-bg-darker-10
 );
 
 // Dark bg
@@ -126,7 +124,7 @@ $light-bg-alpha-4: rgba(#f9f9f9, 0.04);
 $light-bg-alpha-12: rgba(#f9f9f9, 0.12);
 
 // Background palette for dark themes.
-$mat-dark-theme-background: (
+mat.$dark-theme-background-palette: (
   background: $dark-background,
   status-bar: $dark-bg-lighter-20,
   app-bar: $dark-bg-lighter-5,
@@ -136,12 +134,12 @@ $mat-dark-theme-background: (
   tooltip: $dark-bg-lighter-20,
   disabled-button: $light-bg-alpha-12,
   raised-button: $dark-bg-lighter-5,
-  focused-button: $light-focused,
+  focused-button: rgba(white, 0.12),
   selected-button: $dark-bg-lighter-20,
   selected-disabled-button: $dark-bg-lighter-30,
   disabled-button-toggle: $dark-bg-lighter-10,
   unselected-chip: $dark-bg-lighter-20,
-  disabled-list-option: $dark-bg-lighter-10,
+  disabled-list-option: $dark-bg-lighter-10
 );
 
 // Compute font config
@@ -153,9 +151,9 @@ body {
   --primary-color: #34394f;
   --primary-lighter-color: #c2c4ca;
   --primary-darker-color: #212436;
-  --text-primary-color: #{$light-primary-text};
-  --text-primary-lighter-color: #{$dark-primary-text};
-  --text-primary-darker-color: #{$light-primary-text};
+  --text-primary-color: #{white};
+  --text-primary-lighter-color: #{rgba(black, 0.87)};
+  --text-primary-darker-color: #{white};
 }
 $mat-primary: (
   main: #34394f,
@@ -165,9 +163,9 @@ $mat-primary: (
   // For slide toggle,
   contrast:
     (
-      main: $light-primary-text,
-      lighter: $dark-primary-text,
-      darker: $light-primary-text,
+      main: white,
+      lighter: rgba(black, 0.87),
+      darker: white,
     ),
 );
 $theme-primary: mat.define-palette($mat-primary, main, lighter, darker);
@@ -176,9 +174,9 @@ body {
   --accent-color: #f5f6f8;
   --accent-lighter-color: #fcfcfd;
   --accent-darker-color: #f0f2f5;
-  --text-accent-color: #{$dark-primary-text};
-  --text-accent-lighter-color: #{$dark-primary-text};
-  --text-accent-darker-color: #{$dark-primary-text};
+  --text-accent-color: #{rgba(black, 0.87)};
+  --text-accent-lighter-color: #{rgba(black, 0.87)};
+  --text-accent-darker-color: #{rgba(black, 0.87)};
 }
 $mat-accent: (
   main: #f5f6f8,
@@ -188,9 +186,9 @@ $mat-accent: (
   // For slide toggle,
   contrast:
     (
-      main: $dark-primary-text,
-      lighter: $dark-primary-text,
-      darker: $dark-primary-text,
+      main: rgba(black, 0.87),
+      lighter: rgba(black, 0.87),
+      darker: rgba(black, 0.87),
     ),
 );
 $theme-accent: mat.define-palette($mat-accent, main, lighter, darker);
@@ -199,9 +197,9 @@ body {
   --warn-color: #f39a9a;
   --warn-lighter-color: #ffb3b3;
   --warn-darker-color: #ff0000;
-  --text-warn-color: #{$dark-primary-text};
-  --text-warn-lighter-color: #{$dark-primary-text};
-  --text-warn-darker-color: #{$light-primary-text};
+  --text-warn-color: #{rgba(black, 0.87)};
+  --text-warn-lighter-color: #{rgba(black, 0.87)};
+  --text-warn-darker-color: #{white};
 }
 $mat-warn: (
   main: #f39a9a,
@@ -211,9 +209,9 @@ $mat-warn: (
   // For slide toggle,
   contrast:
     (
-      main: $dark-primary-text,
-      lighter: $dark-primary-text,
-      darker: $light-primary-text,
+      main: rgba(black, 0.87),
+      lighter: rgba(black, 0.87),
+      darker: white,
     ),
 );
 $theme-warn: mat.define-palette($mat-warn, main, lighter, darker);
@@ -223,16 +221,16 @@ $theme: (
   accent: $theme-accent,
   warn: $theme-warn,
   is-dark: false,
-  foreground: $mat-light-theme-foreground,
-  background: $mat-light-theme-background,
+  foreground: mat.$light-theme-foreground-palette,
+  background: mat.$light-theme-background-palette,
 );
 $altTheme: (
   primary: $theme-primary,
   accent: $theme-accent,
   warn: $theme-warn,
   is-dark: true,
-  foreground: $mat-dark-theme-foreground,
-  background: $mat-dark-theme-background,
+  foreground: mat.$dark-theme-foreground-palette,
+  background: mat.$dark-theme-background-palette,
 );
 
 // Theme Init
@@ -362,7 +360,7 @@ $spacers: map-merge(
       (
         $spacer * 4.25,
       )
-      //48px,
+      //48px,,
   ),
   $spacers
 );
