--- a/src/app/jokes/jokes.component.html
+++ b/src/app/jokes/jokes.component.html
@@ -2,10 +2,7 @@
   <div class="row justify-content-center align-items-center">
     <div class="col-5 d-flex flex-column py-12">
       <img src="/assets/chuck.png" alt="chuck norris photo" />
-      <span class="mt-6 mat-body-2">
-        “If Chuck Norris were to travel to an alternate dimension in which there
-        was another Chuck Norris and they both fight, they would both win”
-      </span>
+      <span class="mt-6 mb-8 mat-body-2"> “{{ joke }}" </span>
       <chuck-joke-form [categories]="categories"></chuck-joke-form>
     </div>
   </div>
