--- a/src/app/jokes/jokes.component.html
+++ b/src/app/jokes/jokes.component.html
@@ -3,7 +3,10 @@
     <div class="col-5 d-flex flex-column py-12">
       <img src="/assets/chuck.png" alt="chuck norris photo" />
       <span class="mt-6 mb-8 mat-body-2"> “{{ joke }}" </span>
-      <chuck-joke-form [categories]="categories"></chuck-joke-form>
+      <chuck-joke-form
+        [categories]="categories"
+        (submit)="getJoke($event)"
+      ></chuck-joke-form>
     </div>
   </div>
 </div>
