--- a/src/app/jokes/jokes.component.html
+++ b/src/app/jokes/jokes.component.html
@@ -6,7 +6,9 @@
         src="/assets/chuck.png"
         alt="chuck norris photo"
       />
-      <span class="mt-6 mb-8 mat-body-2"> “{{ joke }}" </span>
+      <p class="mt-6 mb-8 mat-body-1">
+        <i>"{{ joke }}"</i>
+      </p>
       <chuck-joke-form
         [categories]="categories"
         (save)="saveJokes($event)"
