--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,13 @@
 
 // Fonts
 @import "https://fonts.googleapis.com/css?family=Material+Icons";
-@import url("https://fonts.googleapis.com/css?family=Inter:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Inter:300,400,500,600");
+
+$bg-color: #f9f9f9;
+$white: #ffffff;
+$dark: #34394f;
+$gray-1: #c4c4c4;
+$gray-2: #f5f6f8;
 
 $fontConfig: (
   display-4: mat.define-typography-level(16px, 112px, 400, "Inter", -0.0938em),
@@ -17,8 +23,8 @@ $fontConfig: (
   subheading-2: mat.define-typography-level(16px, 28px, 400, "Inter", 0.0094em),
   subheading-1: mat.define-typography-level(16px, 24px, 400, "Inter", 0.0063em),
   body-2: mat.define-typography-level(16px, 24px, 400, "Inter", 0.0156em),
-  body-1: mat.define-typography-level(16px, 20px, 400, "Inter", 0.0156em),
-  button: mat.define-typography-level(16px, 26px, 400, "Inter", 0.0313em),
+  body-1: mat.define-typography-level(18px, 18px, 600, "Inter", 0em),
+  button: mat.define-typography-level(16px, 26px, 600, "Inter", 0em),
   caption: mat.define-typography-level(16px, 20px, 400, "Inter", 0.025em),
   input: mat.define-typography-level(16px, 1.625, 400, "Inter", 0.0781em),
 );
@@ -26,7 +32,7 @@ $fontConfig: (
 // Foreground Elements
 
 // Light Theme Text
-$dark-text: #000000;
+$dark-text: $dark;
 $dark-primary-text: rgba($dark-text, 0.87);
 $dark-accent-text: rgba($dark-primary-text, 0.54);
 $dark-disabled-text: rgba($dark-primary-text, 0.38);
@@ -143,6 +149,7 @@ $mat-dark-theme-background: (
 // Theme Config
 
 body {
+  color: $dark;
   --primary-color: #34394f;
   --primary-lighter-color: #c2c4ca;
   --primary-darker-color: #212436;
@@ -263,7 +270,6 @@ $altTheme: (
 // 3. Include remainder of required Bootstrap stylesheets
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
-
 $spacers: ();
 $spacers: map-merge(
   (
@@ -326,7 +332,7 @@ $spacers: map-merge(
       (
         $spacer * 4.25,
       )
-      //48px,,,,,,,,,,,,,,
+      //48px,,,,,,,,,,,,,,,,,,,,,,,,,,,
   ),
   $spacers
 );
@@ -339,9 +345,3 @@ $spacers: map-merge(
 * {
   box-sizing: border-box;
 }
-
-$bg-color: #f9f9f9;
-$white: #ffffff;
-$dark: #34394f;
-$gray-1: #c4c4c4;
-$gray-2: #f5f6f8;
