--- a/src/app/jokes/jokes.component.html
+++ b/src/app/jokes/jokes.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center align-items-center">
-    <div class="col-5 d-flex flex-column py-12">
+    <div class="col-lg-5 d-flex flex-column py-12">
       <img
         *ngIf="!impersonated; else random"
         src="/assets/chuck.png"
