--- a/src/app/jokes/joke-form/joke-form.component.scss
+++ b/src/app/jokes/joke-form/joke-form.component.scss
@@ -1,4 +1,48 @@
+@import "../../../styles/variables";
+
 :host {
   display: flex;
   flex-direction: column;
+
+  ::ng-deep {
+    .mat-form-field-wrapper {
+      border: 1px solid #c4c4c4;
+      padding: 0;
+      border-radius: 6px;
+      padding: map-get($spacers, 4);
+    }
+
+    .dirty .mat-form-field-wrapper {
+      border: 1px solid $dark;
+    }
+
+    .mat-form-field-infix {
+      display: block;
+      position: relative;
+      flex: auto;
+      padding: 0;
+      border: 0;
+    }
+
+    .mat-option {
+      font-weight: 400;
+
+      &:hover {
+        font-weight: 500;
+        background-color: $gray-3;
+      }
+    }
+
+    .mat-active {
+      background-color: $gray-3;
+    }
+
+    .mat-select-arrow {
+      border: none;
+      background: url("/assets/icons/caret-down.svg");
+      width: 24px;
+      height: 24px;
+      color: inherit;
+    }
+  }
 }
