--- a/src/app/shared/number-input/number-input.component.html
+++ b/src/app/shared/number-input/number-input.component.html
@@ -1,5 +1,6 @@
 <div
   class="d-flex justify-content-between align-items-center input-container p-4"
+  [class.invalid]="number.invalid && touched"
 >
   <mat-icon svgIcon="minus_icon" (click)="decrement()"></mat-icon>
   <mat-form-field appearance="none">
@@ -10,11 +11,8 @@
       min="1"
       type="number"
       [(ngModel)]="value"
-      [value]="value"
-      (change)="writeValue($event.target.value)"
+      #number="ngModel"
     />
   </mat-form-field>
-  <!-- <button mat-mini-fab (click)="decrement()"> -->
   <mat-icon svgIcon="plus_icon" (click)="increment()"></mat-icon>
-  <!-- </button> -->
 </div>
